--- a/gallery/index.html
+++ b/gallery/index.html
@@ -110,6 +110,6 @@
         </div>
       </div>
     </div>
-    <script src="app-class.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
